<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/popubwindow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/select_profile_tv"
            android:textColor="@color/grey"/>

        <TextView
            android:id="@+id/take_photo"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/take_photo"
            android:textColor="@color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/grey"/>

        <TextView
            android:id="@+id/from_phone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/from_phone"
            android:textColor="@color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/grey_bg"/>

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/black"/>
    </LinearLayout>

</LinearLayout>