<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/grey_bg"
              android:orientation="vertical">

    <include layout="@layout/title_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/add_photo"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_width="45dp"
            android:layout_height="45dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/people_image"/>

            <TextView
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="添加照片"
                android:textColor="@color/blue_bg"
                android:textSize="11sp"/>

        </FrameLayout>

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="请输入姓名（必填）"
            android:paddingLeft="10dp"
            android:textSize="15sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telphone"/>

        <EditText
            android:id="@+id/edit_telphone"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:hint="@string/telphone_hint"
            android:textCursorDrawable="@null"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"/>

        <EditText
            android:id="@+id/edit_sex"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:hint="@string/select_hint"
            android:textCursorDrawable="@null"/>
    </LinearLayout>

    <View
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classes"/>

        <EditText
            android:id="@+id/edit_classes"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:hint="@string/select_hint"
            android:textCursorDrawable="@null"/>
    </LinearLayout>

</LinearLayout>